# TodoAppRust

./: cargo.toml
grpc-todo/: Cargo.toml  build.rs
grpc-todo/migrations/: 20250702135009_create_tables.sql
grpc-todo/src/: config.rs  db.rs  main.rs  server.rs
htmx-warp/: Cargo.toml  build.rs
htmx-warp/src/: main.rs
